--- a/curriculum_designA/A_1/.vscode/tasks.json
+++ b/curriculum_designA/A_1/.vscode/tasks.json
@@ -30,7 +30,8 @@
 				"-g",
 				"${file}",
 				"-o",
-				"${fileDirname}\\${fileBasenameNoExtension}.exe"
+				"${fileDirname}\\${fileBasenameNoExtension}.exe",
+				"-fexec-charset=GBK"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
