--- a/curriculum_designA/D_1/.vscode/settings.json
+++ b/curriculum_designA/D_1/.vscode/settings.json
@@ -1,5 +1,19 @@
 {
+    
     "files.associations": {
         "iostream": "cpp"
-    }
+    },
+    "terminal.integrated.fontFamily": "Lucida Console",
+"[cpp]": {
+
+        "files.encoding": "utf8"
+        
+        },
+        
+ "[c]": {
+        
+        "files.encoding": "utf8"
+        
+        }
+    
 }
