迷宫完善及其他修补

--- a/curriculum_designA/D_1/.vscode/settings.json
+++ b/curriculum_designA/D_1/.vscode/settings.json
@@ -1,19 +1,8 @@
 {
-    
     "files.associations": {
-        "iostream": "cpp"
-    },
-    "terminal.integrated.fontFamily": "Lucida Console",
-"[cpp]": {
-
-        "files.encoding": "utf8"
-        
-        },
-        
- "[c]": {
-        
-        "files.encoding": "utf8"
-        
-        }
-    
+        "iostream": "cpp",
+        "deque": "cpp",
+        "string": "cpp",
+        "vector": "cpp"
+    }
 }
